[gd_scene load_steps=4 format=3 uid="uid://bsr78xo63cxq"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_4u8vm"]
[ext_resource type="SpriteFrames" uid="uid://cbwnf7gcp7spl" path="res://Resources/SlimeKingSprite.tres" id="2_4ag72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unq8b"]
size = Vector2(162, 89)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_4u8vm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_4ag72")
animation = &"Walk"

[node name="ColBox" type="CollisionShape2D" parent="."]
position = Vector2(14, 22)
shape = SubResource("RectangleShape2D_unq8b")
debug_color = Color(0.827451, 0.254902, 0.74902, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 95.89

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(14, 22)
shape = SubResource("RectangleShape2D_unq8b")
debug_color = Color(0.827451, 0.254902, 0.74902, 0.419608)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
